
** Added accessors for Affy Tiling arrays.

03-17-09 - Benilton Carvalho - committed version 1.5.11

** Generalized bg/bgindex methods for FeatureSet objects.

03-18-09 - Benilton Carvalho - committed version 1.5.12

** Fixed all warnings so it passes CHECK.

03-20-09 - R. Scharpf - committed version 1.5.14
** Removed requirement that chromosome be stored as a character string in oligoSnpSet featureData slot
** Removed calculateCopyNumber.Rd file

03-23-09 - R. Scharpf - committed version 1.5.15
** Removed requirement that chromosome be stored as a character string in SnpCallSet and SnpCopyNumberSet

03-24-09 - B Carvalho - committed version 1.5.16

** Removed unused TilingQSet-class

** Redefined sampleNames method for FeatureSet-like objects so it returns a vector. Because I changed FeatureSet (it now contains "NChannelSet" instead of "eSet"), sampleNames() would return a list (on "NChannelSet", elements of assayData are allowed to have different colnames). For the applications I foresee oligo being used, this (different colnames) should not be the case...

** Changed definition of FeatureSet. Instead of 'eSet', it contains "NChannelSet".

** Added TilingFeatureSet2 class, with two channels, to accommodate 2-colors applications of Tiling arrays.

03-25-2009 - B Carvalho

** Changes to accommodate sequence methods

** Added slot annotation to PDInfo, so we can easily find any information about the object.

03-25-2009 - B Carvalho

** Removed lots of unneeded things from NAMESPACE

** Implemented better definitions in NAMESPACE

** Fixed problem with sampleNames dispatching a warning.

04-07-2009 - R Scharpf  committed v1.5.19

** Removed chromosome requirement in setValidity for oligoSnpSet, SnpCallSet, and SnpCopyNumberSet

04-07-2009 - R Scharpf committed v1.5.20

** Changed initialization method for oligoSnpSet and SnpCopyNumberSet

04-16-2009 - B Bcarvalho committed v 1.5.23

** Cleaned up code

05-07-2009 - B Bcarvalho committed v 1.7.1

** Cleaned up code